--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
 <p> 你随时可通过以下方式申请注销你的点薪帐号</p>
 <p>（1）进入点薪App后，点击&ldquo;我的&rdquo;；</p>
 <p>（2）点击右上角设置图标；</p>
-<p>（3）点击&ldquo;账号与安全&rdquo；; </p>
+<p>（3）点击&ldquo;账号与安全&rdquo; </p>
 <p>（4）点击&ldquo;注销账户&rdquo;；</p>
-<p>（5）在仔细阅读页面提示信息后，如仍决定注销账号的，请点击&ldquo;注销账号&rdquo；</p>
+<p>（5）在仔细阅读页面提示信息后，如仍决定注销账号的，请点击&ldquo;注销账号&rdquo;；</p>
 <p>注销账户后，除法律法规另有规定外，我们将删除或匿名化处理您的个人信息。</p>
 
 <h2>7. 变更</h2>
