--- a/index.html
+++ b/index.html
@@ -26,11 +26,22 @@
     <li><strong>日志信息</strong>，指您使用我们的服务时，系统可能通过cookies、标识符及相关技术收集的信息，包括您的<strong>设备信息</strong>、<strong>浏览信息</strong>、<strong>点击信息</strong>，并将该等信息储存为日志信息，为您提供个性化的用户体验、保障服务安全。您可以通过浏览器设置拒绝或管理cookie、标识符或相关技术的使用。</li>
 </ul>
 
-
-
-
-
-
+<p>我们接入的第三方SDK：</p>
+<ul>
+    <li>阿里百川</li>
+    <p>业务场景：实现购物、跟单等电商相关业务</p>
+    <p>收集信息：设备型号、IP地址、设备软件版本信息、设备识别码、设备标识符、所在地区、网络使用习惯、设备相关应用信息以及操作日志</p>
+    <p>SDK厂商信息： 浙江淘宝网络有限公司、淘宝（中国）软件有限公司</p>
+    <li>微信SDK</li>
+    <p>业务场景：授权登录、社会化分享</p>
+    <p>收集信息：app信息、设备识别信息（IMEI/Mac地址）</p>
+    <p>SDK厂商信息： 深圳市腾讯计算机系统有限公司</p>
+    <li>京东开普勒</li>
+    <p>业务场景：京东授权登录、添加购物车、唤起京东APP详情页</p>
+    <p>收集信息：网络和wif信息、手机设备信息、网络使用习惯、其他应用信息以及操作日志</p>
+    <p>SDK厂商信息：北京京东世纪贸易有限公司</p>
+</ul>
+<p>我们会对合作伙伴获取有关信息的应用程序接口（API）、软件工具开发包（SDK）进行严格的安全检测，并与合作伙伴约定严格的数据保护措施，令其按照我们的委托目的、服务说明、本隐私政策以及其他任何相关的保密和安全措施来处理个人信息。</p>
 <h2>2. 信息的存储</h2>
 <strong>2.1 信息存储的方式和期限</strong>
 <ul>
@@ -101,11 +112,11 @@
 </p>
 <p>当您决定不再使用我们的产品或服务时，可以申请注销账户。</p>
 <p> 你随时可通过以下方式申请注销你的点薪帐号</p>
-<p>（1）进入点薪App后，点击&ldquo;我的&rdquo;；</p>
-<p>（2）点击右上角设置图标；</p>
+<p>（1）进入点薪App后，点击&ldquo;我的&rdquo;</p>
+<p>（2）点击右上角设置图标</p>
 <p>（3）点击&ldquo;账号与安全&rdquo; </p>
-<p>（4）点击&ldquo;注销账户&rdquo;；</p>
-<p>（5）在仔细阅读页面提示信息后，如仍决定注销账号的，请点击&ldquo;注销账号&rdquo;；</p>
+<p>（4）点击&ldquo;注销账户&rdquo;</p>
+<p>（5）在仔细阅读页面提示信息后，如仍决定注销账号的，请点击&ldquo;注销账号&rdquo;</p>
 <p>注销账户后，除法律法规另有规定外，我们将删除或匿名化处理您的个人信息。</p>
 
 <h2>7. 变更</h2>
