--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
     <p>业务场景：授权登录、社会化分享</p>
     <p>收集信息：app信息、设备识别信息（IMEI/Mac地址）</p>
     <p>SDK厂商信息： 深圳市腾讯计算机系统有限公司</p>
+    <li>个推</li>
+    <p>业务场景：移动应用消息推送云服务解决方案</p>
+    <p>收集信息：设备信息、应用列表信息、网络信息以及位置相关信息</p>
+    <p>SDK厂商信息：浙江每日互动网络科技股份有限公司</p>
 </ul>
 <p>我们会对合作伙伴获取有关信息的应用程序接口（API）、软件工具开发包（SDK）进行严格的安全检测，并与合作伙伴约定严格的数据保护措施，令其按照我们的委托目的、服务说明、本隐私政策以及其他任何相关的保密和安全措施来处理个人信息。</p>
 <h2>2. 信息的存储</h2>
